--- a/index.html
+++ b/index.html
@@ -1,1 +1,125 @@
+<!DOCTYPE html>
+<html>
 
+<head> 
+    <meta charset=utf-8 />
+    <title>Philadelphia Housing Authority Property Transfers: 2010-2022 </title> 
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+
+    <style>
+        <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #d3d3d3;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+      color: #3d3d3d;
+    }
+
+    section {
+      width: 80%;
+      margin: 10px auto;
+    }
+
+    h1 {
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 300;
+      font-size: 2.5em;
+      /* The em unit. 2.5x the current size */
+      letter-spacing: .04em;
+      text-transform: uppercase;
+    }
+
+    h2 {
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 700;
+      color: gray;
+      font-size: 1.25em;
+      letter-spacing: .04em;
+    }
+
+    p {
+      font-size: 1em;
+      line-height: 1.5em;
+    }
+
+    a {
+      color: #005daa;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
+      margin: 10px 0
+    }
+
+    #map {
+      width: 100%;
+      margin: 0px auto;
+
+    }
+
+    .max-image-width {
+      width: 100%;
+    }
+
+
+    .linkbox {
+      margin: 3px 0 20px 0;
+      display: block;
+      font-weight: 300;
+    }
+
+    hr {
+      border: 0px;
+      border-bottom: 1px solid #3d3d3d;
+      padding-top: 20px;
+    }
+
+    
+  </style>
+</head>
+<body>
+    <h1></h1> 
+    <h1></h1>
+	<div id='map'>
+		<!-- Add your custom HTML here -->
+		<img src="../pha_property_sold/pha_lowres.png">
+	</div>
+	<a href="../pha_property_sold/pha_highres.png">Link to high resolution version</a>
+	<section>
+        <h2>Authored by: Sid Feinberg </h2>
+		<p>Data source: <a href="https://www.opendataphilly.org/" target="blank">OpenDataPhilly: </a>
+            <a href: https://www.opendataphilly.org/dataset/real-estate-transfers target="blank">Real Estate Transfers</a>,
+            <a href: https://www.opendataphilly.org/dataset/census-blocks target="blank"> Census Blocks</a>
+		<br><br>
+        These maps represent the approximately 6,000 real estate transactions conducted by the Philadelphia Housing Authority between 2010 and the present (June 2022). 
+        The map to the right represents the spatial distribution of property sold or transfered away from the PHA while the map to the left represents new property aquisitions during the same time period.
+        To create these maps, real estate transaction point layers, by year, were filtered to data points representing transactions by the PHA, collated into two layers representing aquisitions and transfers, and 
+        represented as heat maps to show their respective spatial distributions in the city of Philadelphia. The map helps to represent where the PHA is buying and selling land, which
+        may help us better understand the PHA's financial model and its potential ramifications. 
+        <br><br>
+        <a href: https://github.com/sidef1270/pha_property_sold/blob/779df131ac97d39099904f5587205da090c2b546/README.md target="blank">README</a>
+    </p>
+
+		<ul>
+			==
+			<li>See my projects on GitHub: <a href="https://github.com/sidef1270">sidef1270</a></li>
+			<li>Follow me on twitter: <a href="https://twitter.com/bergs1270">@bergs1270</a></li>
+		</ul>
+	</section>
+</body>
+
+
+</html>
