--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
 
 	<div id='map'>
 		<!-- Add your custom HTML here -->
-		<img src="pha_lowres.png">
+		<img src="pha_property_lowres.png">
 	</div>
-	<a href="pha_highres.png" class="resolution-link">Link to high resolution version</a>
-	<section>
+	<a href="pha_property_highres.png" class="resolution-link">Link to high resolution version</a>
+
+  <section>
         <h2>Authored by: Sid Feinberg </h2>
 		<p>Data source: <a href="https://www.opendataphilly.org/" target="blank">OpenDataPhilly: </a>
             <a href="https://www.opendataphilly.org/dataset/real-estate-transfers" target="_blank">Real Estate Transfers</a>,
